# gitfleet

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  PROVIDERS.md  README.md  ROADMAP.md  SECURITY.md  deny.toml  lefthook.yml  package.json  pnpm-lock.yaml
.github/: PULL_REQUEST_TEMPLATE.md  renovate.json
.github/ISSUE_TEMPLATE/: build.md  chore.md  ci.md  documentation.md  feature.md  fix.md  performance.md  refactor.md  style.md  test.md
.github/workflows/: build.yml  checksum.yml  main.yml  package.yml  prepare.yml  publish.yml  release.yml  security.yml  test.yml  verify.yml
gitfleet/: Cargo.toml
gitfleet-cli/: Cargo.toml
gitfleet-cli/src/: alias_expansion.rs  app.rs  main.rs  repo_util.rs
gitfleet-cli/src/commands/: access.rs  advisory.rs  alias.rs  analytics.rs  api.rs  attestation.rs  auth.rs  browse.rs  change.rs  comment_cmd.rs  config.rs  dependency.rs  discussion.rs  environment.rs  fork_cmd.rs  git_credential.rs  govern.rs  identity.rs  inbox.rs  issue.rs  license.rs  milestone_cmd.rs  mod.rs  package.rs  pipeline.rs  policy.rs  project_cmd.rs  release.rs  repo.rs  runner.rs  secret_cmd.rs  site.rs  snippet.rs  test_helpers.rs  version.rs  workspace.rs
gitfleet-cli/src/service/: browse.rs  deployments.rs  issues.rs  mod.rs  pipelines.rs  releases.rs  repos.rs  search.rs  variables.rs  webhooks.rs  workspace.rs
gitfleet-cli/tests/: cli.rs
gitfleet-cli/tests/snapshots/: cli__help_api.snap  cli__help_config.snap  cli__help_main.snap  cli__help_repo.snap  cli__help_site.snap
gitfleet-core/: Cargo.toml
gitfleet-core/src/: banner.rs  bulk.rs  command.rs  config.rs  constants.rs  errors.rs  file_lock.rs  git.rs  icons.rs  lib.rs  logger.rs  operations.rs  output.rs  output_state.rs  progress.rs  prompt.rs  provider.rs  repository.rs  secrets.rs  spinner.rs  theme.rs  types.rs  workspace.rs
gitfleet-core/tests/: bulk_integration.rs  config.rs  config_integration.rs  constants.rs  constants_integration.rs  domain.rs  operations.rs  operations_integration.rs  output_integration.rs  prompt.rs  prompt_integration.rs  secrets.rs  theme.rs  theme_integration.rs
gitfleet-docs/: README.md  architecture-overview.md  authentication.md  concepts.md  configuration.md  documentation-guide.md  output.md  providers.md  safety.md  troubleshooting.md
gitfleet-docs/commands/: README.md  access.md  advisory.md  alias.md  analytics.md  api.md  attestation.md  auth.md  browse.md  change.md  code.md  completion.md  config.md  deploy.md  deps.md  dev.md  discussion.md  environment.md  govern.md  identity.md  inbox.md  issue.md  label.md  license.md  pipeline.md  planning.md  policy.md  registry.md  release.md  repo.md  review.md  runner.md  search.md  secret.md  security.md  site.md  snippet.md  template.md  variable.md  version.md  (+3 more)
gitfleet-docs/workflows/: README.md  automation-json.md  change-review.md  first-run.md  multi-provider-profiles.md  pipeline-delivery.md  repository-lifecycle.md  security-governance.md  workspace-fleets.md
gitfleet-playbooks/: access.sh  advisory.sh  alias.sh  all.sh  analytics.sh  api.sh  attestation.sh  auth.sh  browse.sh  change.sh  code.sh  comment.sh  completion.sh  config.sh  dependency.sh  deploy.sh  dev.sh  discussion.sh  env.sh  environment.sh  govern.sh  identity.sh  inbox.sh  issue.sh  label.sh  license.sh  milestone.sh  package.sh  pipeline.sh  policy.sh  project.sh  reaction.sh  release.sh  repo.sh  runner.sh  search.sh  secret.sh  security.sh  site.sh  snippet.sh  (+6 more)
gitfleet-providers/: Cargo.toml
gitfleet-providers/src/: lib.rs  registry.rs  retry.rs
gitfleet-providers/src/github/: client.rs  mod.rs  provider.rs
gitfleet-providers/src/github/api/: access.rs  analytics.rs  auth.rs  checks.rs  code.rs  codespaces.rs  comments.rs  contents.rs  deployments.rs  discussions.rs  environments.rs  forks.rs  gists.rs  governance.rs  identity.rs  issues.rs  labels.rs  milestones.rs  mod.rs  notifications.rs  orgs.rs  packages.rs  pages.rs  path.rs  projects.rs  protection.rs  pulls.rs  reactions.rs  releases.rs  remaining.rs  repos.rs  runners.rs  search.rs  secrets.rs  stargazers.rs  status.rs  teams.rs  variables.rs  webhooks.rs  wiki.rs  (+1 more)
gitfleet-providers/src/gitlab/: client.rs  mod.rs  provider.rs
gitfleet-providers/src/gitlab/api/: access.rs  advisories.rs  analytics.rs  attestations.rs  auth.rs  browsing.rs  code.rs  dependencies.rs  deploy.rs  discussions.rs  environments.rs  governance.rs  identity.rs  issues.rs  labels.rs  licenses.rs  merge_requests.rs  milestones.rs  mod.rs  notifications.rs  pipelines.rs  policy.rs  projects.rs  raw.rs  registry.rs  releases.rs  review.rs  runners.rs  search.rs  secrets.rs  site.rs  snippets.rs  templates.rs  variables.rs  webhooks.rs  wikis.rs
gitfleet-providers/tests/: github.rs  github_extended.rs  gitlab.rs  gitlab_extended.rs  gitlab_integration.rs  integration.rs  retry.rs
gitfleet-providers/tests/snapshots/: github__github_issue_normalized.snap  github__github_milestone_normalized.snap  github__github_repo_normalized.snap  github_extended__github_issue_normalized.snap  github_extended__github_milestone_normalized.snap  github_extended__github_repo_normalized.snap  gitlab__gitlab_milestone_normalized.snap  gitlab__gitlab_snippet_raw.snap  gitlab__gitlab_tag_protection_normalized.snap  gitlab_extended__gitlab_milestone_normalized.snap  gitlab_extended__gitlab_snippet_raw.snap  gitlab_extended__gitlab_tag_protection_normalized.snap
gitfleet-scripts/: changelog.sh  clean.sh  loc.sh  release-notes.sh  tests.sh  verify-release-archive.sh
gitfleet-site/: README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
gitfleet-site/src/components/: HeroSection.astro  SiteFooter.astro  SiteHeader.astro  TerminalPanel.astro
gitfleet-site/src/data/: site.test.ts  site.ts
gitfleet-site/src/layouts/: BaseLayout.astro
gitfleet-site/src/pages/: index.astro
gitfleet-site/tests/: homepage.test.ts
gitfleet/src/: app.rs  main.rs
gitfleet/tests/: cli.rs
(+56 files in other folders)
