[workspace]
members = [
    "gitfleet-core",
    "gitfleet-providers",
    "gitfleet",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "MIT"
authors = ["airscripts"]

[workspace.dependencies]
gitfleet-core = { path = "gitfleet-core" }
gitfleet-providers = { path = "gitfleet-providers" }
async-trait = "0.1"
base64 = "0.22"
insta = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serial_test = "3"
time = { version = "0.3", features = ["formatting", "serde"] }
tokio = { version = "1", default-features = false }
wiremock = "0.6"
