[package]
name = "gitfleet-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI for Gitfleet"

[[bin]]
name = "gitfleet"
path = "src/main.rs"

[dependencies]
gitfleet-core = { workspace = true }
gitfleet-providers = { workspace = true }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
inquire = "0.9"
owo-colors = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
async-trait = "0.1"
serial_test = "3"
insta = { version = "1", features = ["json"] }
wiremock = "0.6"
