[package]
name = "gitfleet-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI for Gitfleet"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(coverage)"] }

[[bin]]
name = "gitfleet"
path = "src/main.rs"

[[bin]]
name = "gf"
path = "src/bin/gf.rs"
test = false
bench = false

[dependencies]
gitfleet-core = { workspace = true }
gitfleet-providers = { workspace = true }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde_json = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
async-trait = { workspace = true }
serial_test = { workspace = true }
insta = { workspace = true, features = ["json"] }
wiremock = { workspace = true }
