[package]
name = "gitfleet-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Domain types, provider trait, operations, and infrastructure for Gitfleet"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
inquire = "0.9"
indicatif = "0.17"
owo-colors = { version = "4", features = ["supports-colors"] }
dirs = "6"
time = { version = "0.3", features = ["formatting", "serde"] }
sha2 = "0.10"
hex = "0.4"
regex = "1"
url = "2"
base64 = "0.22"
async-trait = "0.1"

dryoc = "0.9"

[dev-dependencies]
serial_test = "3"
tempfile = "3"
insta = "1"
tokio = { version = "1", features = ["test-util", "macros"] }