[package]
name = "gitfleet-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Domain types, provider trait, operations, and infrastructure for Gitfleet"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = "1.0"
thiserror = "2"
tokio = { workspace = true, features = ["rt", "sync"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
inquire = { version = "0.9", default-features = false, features = ["crossterm", "fuzzy"] }
indicatif = "0.18"
owo-colors = { version = "4", features = ["supports-colors"] }
dirs = "6"
time = { workspace = true }
regex = "1"
url = "2"
base64 = { workspace = true }
async-trait = { workspace = true }

dryoc = { version = "0.9", default-features = false }
keyring = "4.1"

[dev-dependencies]
serial_test = { workspace = true }
tempfile = "3"
insta = { workspace = true }
tokio = { workspace = true, features = ["macros"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }
