[package]
name = "gitfleet-providers"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "GitHub and GitLab provider implementations for Gitfleet"

[dependencies]
gitfleet-core = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
tracing = "0.1"
urlencoding = "2"
time = { version = "0.3", features = ["formatting", "serde"] }
async-trait = "0.1"

[dev-dependencies]
serial_test = "3"
wiremock = "0.6"
insta = { version = "1", features = ["json"] }
tokio = { version = "1", features = ["test-util", "macros"] }
http = "1"