[package]
name = "gitfleet-providers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "GitHub and GitLab provider implementations for Gitfleet"

[dependencies]
gitfleet-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["time"] }
reqwest = { version = "0.13", features = ["json"] }
tracing = "0.1"
urlencoding = "2"
url = "2"
time = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
wiremock = { workspace = true }
insta = { workspace = true, features = ["json"] }
tokio = { workspace = true, features = ["macros", "rt"] }
http = "1"
